<resources>
    <string name="app_name">Champion Picker</string>
    <string name="add_champion">Add Champion</string>
    <string name="no_champions">No Champions Added</string>
    <string name="add_role">Add Role</string>
    <string name="role_name">Role Name</string>
    <string name="role_desc">Role Description</string>
    <string name="role_req">Add both name and description</string>
    <string name="alert">Alert</string>
    <string name="champion_desc">Champion Description</string>
    <string name="enter_desc"> Please Enter a Description</string>
    <string name="enter_champ"> Please Enter a Name</string>
    <string name="ok">OK</string>
    <string name="champion_error">Error : Couldn\'t Add a Champion...</string>
    <string name="championDetails">Champion Details</string>
    <string name="name">Name :</string>
    <string name="description">Description :</string>
    <string name="winRate">WinrateI :</string>
    <string name="enter_winrate">Please Enter WinRate</string>
    <string name="action_add">Add</string>
    <string name="action_list">List</string>
    <string name="nav_header_title">Champion Picker</string>
    <string name="nav_header_subtitle">test@test.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="donationsNotFound">No champions in the database!</string>
    <string name="messageLoading">Please Wait while the Champions are Loading...</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="select_profile_image">Select Profile Image</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="back_button">Back</string>
    <string name="no_roles">No Roles Added</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="attention">Attention</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="champion_winRate"> Win Rate</string>
    <string name="champion_name"> Name</string>
    <string name="required_fields">*required fields</string>
    <string name="save">Save</string>
    <string name="role">Role</string>
    <string name="edit">Edit</string>
    <string name="role_details">Role Details</string>
    <string name="role_edit">Role Edit</string>
    <string name="search">Search</string>
    <string name="role_name_label">Name:</string>
    <string name="role_description_label">Description:</string>
    <string name="role_winrate_label">WinRate:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="hint_name">Placeholder Text</string>
    <string name="hint_desc">Description</string>
    <string name="hint_name_real">Name</string>
    <string name="hint_wr">Winrate</string>
</resources>